# bootemup

./: README.md  app.py  bootemup.py  config.toml  pyproject.toml
bootemup/: config.py  container.py  html.py  utils.py
bootemup/routes/: __init__.py  boot.py  info.py  kill.py  logs.py  start.py  stop.py
bootemup/tasks/: __init__.py  remove_obsolete.py  stop_inactive.py
