[project]
name = "bootemup"
version = "0.1.0"
description = "Boot akretion CIs on the fly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.8",
]

[dependency-groups]
dev = [
    "aiohttp-devtools>=1.1.2",
    "kalong>=0.5.2",
    "nest-asyncio>=1.6.0",
    "ruff>=0.8.6",
]
